55) Add snmpd daemon.<br>
56) Add KLogd, SysLogd and  RemoteSysLogIP variables.<br>
57) Dnsmasq update to 2.59 version.<br>
58) Enable snmp wifi drivers options.<br>
59) More clean updates.<br>
60) Fix update firmware with usb storage configured.<br>

<br>
<b>1.12.x</b><br>
1) Add l2tp vpn server init logic.<br>
2) Add detailed link statistic in wireless AP mode.<br>
3) Fix table size and webui.<br>
4) Small fixes in network init, dhcpc, iptables logic.<br>
5) Update usb-modeswitch to 1.2.0 version.<br>
6) Add and use nvram_buf_get commad for fast get group nvram variable.<br>
7) libevent update to 2.0.15 stable version.<br>
8) Update 802.1x daemon from 3.6.0.0 SDK.<br>
9) Init scripts optimize for decrease restart overhead and speedup.<br>
10) Add new runlevel W* for exclude  web_wait services from boot init thread.<br>
11) Fix restart transmission at new disk mount.<br>
12) Add iptables rules for transmission.<br>
13) Disable NAND Flash support per default. Not used NAND Flash in real routers devices. Use only in STB.<br>
14) WiFi drivers disable ATE mode support, disable some debug messages, disable IAPP support(need external daemon for support).<br>
15) Fix wireless security page.<br>
16) Add PrinterSrvEnabled PrinterSrvBidir variables for configure print server.<br>
17) Set low prio for samba and transmission.<br>
18) PPPD add external_chap_sec options for use /etc/ppp-l2tpsrv/chap-secrets instad /etc/ppp/chap-secrets in server mode.<br>
19) Fix l2tp server autentification.<br>
20) Set minunit for l2tp server mode to 10 (need hole).<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://wive-ng.sf.net">wive-ng.sf.net - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>